After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 692718 - Custom Chromium decorations not draggable
Custom Chromium decorations not draggable
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
3.7.x
Other Linux
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
: 693205 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2013-01-28 16:27 UTC by Mantas Mikulėnas (grawity)
Modified: 2013-02-09 16:03 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix button check in meta_window_client_message (1.60 KB, patch)
2013-02-09 10:32 UTC, drago01
committed Details | Review

Description Mantas Mikulėnas (grawity) 2013-01-28 16:27:49 UTC
In Chromium, when "Use System Title Bar" is disabled, the custom window decorations do not react to any drag attempts – it is impossible to move or resize the window the usual way. (Super+drag still works.)

This was introduced by:
commit 3a3be74e37048a33fb29b355aff99a5cc7f75419
Author: Jasper St. Pierre <jstpierre@mecheye.net>
Date:   Sun Dec 16 21:47:11 2012 -0500

    Remove some server calls for core devices

(Should this be reported to Chromium instead?)
Comment 1 Jasper St. Pierre (not reading bugmail) 2013-01-28 17:06:06 UTC
No. This is a regression from the XI2 port. I'll look into it.
Comment 2 Rui Matos 2013-02-05 15:04:58 UTC
*** Bug 693205 has been marked as a duplicate of this bug. ***
Comment 3 drago01 2013-02-09 10:32:15 UTC
Created attachment 235580 [details] [review]
Fix button check in meta_window_client_message

Fixes a regression introduced in 3a3be74e37048a33fb29b355aff99a5cc7f75419
Comment 4 Jasper St. Pierre (not reading bugmail) 2013-02-09 10:53:02 UTC
Review of attachment 235580 [details] [review]:

Almost there.

::: src/core/window.c
@@ +6309,3 @@
 
+/* Copied from the old gtk+/xi2 branch */
+#define BIT_IS_ON(ptr, bit) (((unsigned char *) (ptr))[(bit) >> 3] & (1 << ((bit) & 7)))

XIMaskIsSet?
Comment 5 drago01 2013-02-09 12:18:15 UTC
Attachment 235580 [details] pushed as d482590 - Fix button check in meta_window_client_message

Pushed with renamed makro.
Comment 6 Rui Matos 2013-02-09 15:17:34 UTC
(In reply to comment #5)
> Attachment 235580 [details] pushed as d482590 - Fix button check in
> meta_window_client_message
> 
> Pushed with renamed makro.

I think Jasper was saying that this macro exists in the XI2.h header already. As is, mutter doesn't build.
Comment 7 drago01 2013-02-09 16:03:10 UTC
(In reply to comment #6)
> (In reply to comment #5)
> > Attachment 235580 [details] [details] pushed as d482590 - Fix button check in
> > meta_window_client_message
> > 
> > Pushed with renamed makro.
> 
> I think Jasper was saying that this macro exists in the XI2.h header already.
> As is, mutter doesn't build.

Ouch sorry fixed now.