Fix button check in meta_window_client_message

Fixes a regression introduced in 3a3be74e37048a33fb29b355aff99a5cc7f75419

https://bugzilla.gnome.org/show_bug.cgi?id=692718